[package]
name = "yat_point"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed", "idl-build"] }
anchor-spl = { version = "0.31.0", features = ["associated_token", "idl-build"] }

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]